export interface DayOption { id: string; label: string; disabled: boolean; }
