export interface SlotOption { id: string; label: string; state: 'Open' | 'Taken'; }
